# smart_dictate

./: .gitignore  README.md  main.py  pyproject.toml  smart_dictate.spec
resources/: SmartDictate.icns
smart_dictate/: __init__.py  app.py  audio_capture.py  cli.py  config.py  hotkeys.py  keychain.py  languages.py  logging_setup.py  login_item.py  model_manager.py  models_catalog.py  paste.py  paths.py  postprocess.py  settings.py  transcription.py
